--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.wrapper {
+  width: 350px;
+  margin: 0 auto;
+}
